# AI-endo-forum-scraper

./: .gitignore  00_welcome.py  README.md  app.py  main.py  pyproject.toml  sandbox.py  test-parser.ipynb
.streamlit/: config.toml
endo_forums/: scrapy.cfg
endo_forums/endo_forums/: items.py  middlewares.py  pipelines.py  settings.py
endo_forums/endo_forums/spiders/: google_search.py
lemmy_EndoScraper/: endo_search_results.csv  scrapy.cfg
lemmy_EndoScraper/lemmy_EndoScraper/: items.py  middlewares.py  pipelines.py  settings.py
lemmy_EndoScraper/lemmy_EndoScraper/spiders/: lemmy_endo.py
pages/: 01_analyser.py  02_pdf_gen.py
playground/: body_map.py
services/: llm_analyser.py  preprocessor.py
